Create header with size change buttons/title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+        <div class="header">
+            <button class="grid-size">Change Size</button>
+            <div class="title">Etch-a-Sketch!</div>
+            <div class="current-size">Current Size: </div>
+        </div>
         <div class="container"></div>
     </body>
 </html>
