--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     </head>
 
     <body>
-        <div class="header"> 
-            <div class="title">Etch-a-Sketch!</div>    
-        </div>
+        <div class="header">Etch-a-Sketch!</div>
         <button class="grid-size">Change Size</button>
         <div class="current-size">Current Size: </div>
         <div class="container"></div>
