Restructure header and add clear button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     </head>
 
     <body>
-        <div class="header">Etch-a-Sketch!</div>
-        <button class="grid-size">Change Size</button>
-        <div class="current-size">Current Size: </div>
+        <div class="header">
+            <div class="title">Etch-a-Sketch!</div>
+            <div class="size-ctrl">
+                <button class="grid-size">Change Size</button>
+                <div class="current-size">Current Size: </div>
+                <button class="clear">Clear</div>
+            </div>
+        </div>
         <div class="container"></div>
     </body>
 </html>
